Fixed submenu on tablet

--- a/web/Content/pushy_.less
+++ b/web/Content/pushy_.less
@@ -2,12 +2,13 @@
     Copyright (c) Ascensio System SIA 2019. All rights reserved.
     https://www.onlyoffice.com
 */
-@import "base.less";
+
 @media screen and (max-width: 1024px) {
+
     .pushy {
         -webkit-overflow-scrolling: touch;
         background: #fff;
-        border-right: 1px solid @commonBorderColor;
+        border-right: 1px solid #FF6F3D;
         height: 100%;
         overflow: auto;
         position: fixed;
@@ -16,12 +17,14 @@
         visibility: hidden;
         width: 300px;
         z-index: 9999999;
+
         a {
             color: #b3b3b1;
             display: block;
             outline: 0;
             padding: 15px 30px;
             text-decoration: none;
+
             &:hover {
                 color: #ffffff;
             }
