--- a/web/Content/styles.css
+++ b/web/Content/styles.css
@@ -1851,6 +1851,10 @@ article {
 
 @media screen and (max-width: 1024px) {
 
+    .layout-table-header{
+        position:relative;
+    }
+
     .icon-program-block {
         max-width: 928px;
         display: block;
@@ -1870,11 +1874,31 @@ article {
         padding: 21px 0 0 0;
         text-align: center;
         float: none;
+        margin: 0;
     }
 
     .copyReserved {
         text-align: center;
         float: none;
+    }
+
+    .ham_menu {
+        cursor: pointer;
+        display: block;
+        height: 18px;
+        right: 0;
+        margin: 0;
+        padding: 26px;
+        width: 30px;
+        position: absolute;
+    }
+
+    .ham_menu span {
+        background-color: #F5F5F5;
+        display: block;
+        height: 2px;
+        margin: 0 0 4px;
+        width: 20px;
     }
 }
 
